--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,38 +6,60 @@ body {
 .content {
 	padding: 0 10px;
 
-	label {
-		display: block;
-		margin-bottom: 10px;
-		font-size: 18px;
-	}
+	.form-section {
+		label {
+			display: block;
+			margin-bottom: 10px;
+			font-size: 18px;
 
-	.text-input {
-		border-radius: 5px;
-		border: 1px solid #ccc;
-		height: 40px;
-		width: 100%;
-		font-size: 17px;
-		padding: 0 20px;
-		color: #555;
-		-moz-box-sizing: border-box; 
-	    -webkit-box-sizing: border-box; 
-	    box-sizing: border-box;
-	}
+			&.error {
+				color: red;
+				font-size: 16px;
+				margin-top: 5px;
+			}
+		}
 
-	.form-row {
-		margin-bottom: 20px;
-	}
+		input {
+			
+			&.error {
+				border-color: red;
+			}
+		}
+		.text-input {
+			border-radius: 5px;
+			border: 1px solid #ccc;
+			height: 40px;
+			width: 100%;
+			font-size: 17px;
+			padding: 0 20px;
+			color: #555;
+			-moz-box-sizing: border-box; 
+		    -webkit-box-sizing: border-box; 
+		    box-sizing: border-box;
+		}
 
-	.submit {
-		width: 100%;
-    	height: 40px;
-    	font-size: 23px;
-    	border-radius: 5px;
-    	border: none;
-    	-webkit-user-select: none;  
-		-moz-user-select: none;    
-		-ms-user-select: none;      
-		user-select: none;
+		.form-row {
+			margin-bottom: 20px;
+		}
+
+		.submit {
+			width: 100%;
+	    	height: 40px;
+	    	font-size: 23px;
+	    	border-radius: 5px;
+	    	border: none;
+	    	-webkit-user-select: none;  
+			-moz-user-select: none;    
+			-ms-user-select: none;      
+			user-select: none;
+
+			&:focus {
+
+			}
+
+			&:hover {
+
+			}
+		}
 	}
 }
