--- a/sass/responsive.scss
+++ b/sass/responsive.scss
@@ -4,6 +4,10 @@
 		#user-creation {
 			width: 500px;
 			margin: 0 auto;
+			padding: 30px;
+		    background: bisque;
+		    border-radius: 10px;
+		    /*box-shadow: inset 0 1px 2px rgba(0,0,0,0.075);*/
 		}
 	}
 }
