started event registration markup

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -63,11 +63,11 @@ body {
 		}
 
 		.progressBarContainer {
-			#progressbar {
+			#user-progressbar {
 				height: 1em;
 			}
 
-			#progress {
+			#user-progress {
 				margin: 5px 0;
 			}
 		}
