--- a/sass/responsive.scss
+++ b/sass/responsive.scss
@@ -1,7 +1,7 @@
 @media screen and(min-width: 501px) {
 	.content {
 		
-		#user-creation {
+		#user-creation, #event-creation {
 			width: 500px;
 			margin: 0 auto;
 			padding: 30px;
