added hover and focus background to submit button

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -54,11 +54,11 @@ body {
 			user-select: none;
 
 			&:focus {
-				//Todo is important
+				background: #ddd;
 			}
 
 			&:hover {
-				//Todo is important
+				background: #cecece;
 			}
 		}
 
