--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,7 +8,7 @@ body {
 
 	.form-section {
 		label {
-			display: block;
+			display: inline-block;
 			margin-bottom: 10px;
 			font-size: 18px;
 
@@ -63,11 +63,11 @@ body {
 		}
 
 		.progressBarContainer {
-			#user-progressbar {
+			.progress-bar {
 				height: 1em;
 			}
 
-			#user-progress {
+			.progress {
 				margin: 5px 0;
 			}
 		}
