added guest validation, some missings

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,7 +12,7 @@ body {
 			margin-bottom: 10px;
 			font-size: 18px;
 
-			&.error {
+			&.error, &.custom-error {
 				color: red;
 				font-size: 16px;
 				margin-top: 5px;
