--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,7 +7,7 @@ li {
 	list-style-type: none;
 }
 
-.content {
+.main-content {
 	padding: 0 10px;
 
 	.form-section {
@@ -89,6 +89,6 @@ li {
 	}
 
 	#user-creation, #event-creation {
-		// display: none;
+		display: none;
 	}
 }
