--- a/sass/responsive.scss
+++ b/sass/responsive.scss
@@ -1,13 +1,13 @@
 @media screen and(min-width: 501px) {
-	.content {
+	.main-content {
 		
-		#user-creation, #event-creation {
+		#user-creation, #event-creation, #events-display {
 			width: 500px;
 			margin: 0 auto;
 			padding: 30px;
 		    background: bisque;
 		    border-radius: 10px;
-		    /*box-shadow: inset 0 1px 2px rgba(0,0,0,0.075);*/
+		    box-shadow: inset 0 1px 2px rgba(0,0,0,0.075);
 		}
 	}
 }
