--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,14 +1,24 @@
 body {
 	padding: 0;
 	margin: 0;
+	font-family: arial, sans-serif;
 }
 
-li {
-	list-style-type: none;
+ul {
+	padding: 0;
+
+	li {
+		list-style-type: none;
+	}
 }
 
 .main-content {
-	padding: 0 10px;
+	padding: 0 1em;
+
+	.main-title {
+		font-size: 25px;
+		color: gray;
+	}
 
 	.form-section {
 		label {
@@ -78,12 +88,42 @@ li {
 	}
 
 	#events-display {
-		
-		.content {
-			display: none;
 
-			&.active {
-				display: block;
+		.accordion {
+
+			.accordion-item {
+			    margin-bottom: 10px;
+			}
+			
+			.title {
+				font-size: 20px;
+			    margin: 0;
+			    background: brown;
+			    color: #fff;
+			    padding: 10px;
+			}
+
+			.content {
+				display: none;
+				padding: 0 10px;
+				background-color: burlywood;
+
+				&.active {
+					display: block;
+				}
+
+				.label, .value {
+					margin: 0;
+					padding-bottom: 10px;
+				}
+
+				.label {
+					font-size: 18px
+				}
+
+				.value {
+					font-size: 16px;
+				}
 			}
 		}
 	}
@@ -91,4 +131,16 @@ li {
 	#user-creation, #event-creation {
 		display: none;
 	}
+}
+
+.hamburger {
+    background: none;
+    top: 0;
+    line-height: 45px;
+    border: 0;
+    font-size: 1.4em;
+    font-weight: bold;
+    cursor: pointer;
+    outline: none;
+    z-index: 10000000000000;
 }
