--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,7 +16,7 @@ ul {
 	padding: 0 1em;
 
 	.main-title {
-		font-size: 25px;
+		font-size: 23px;
 		color: gray;
 	}
 
@@ -96,7 +96,7 @@ ul {
 			}
 			
 			.title {
-				font-size: 20px;
+				font-size: 18px;
 			    margin: 0;
 			    background: brown;
 			    color: #fff;
@@ -105,24 +105,28 @@ ul {
 
 			.content {
 				display: none;
-				padding: 0 10px;
+				padding: 10px;
 				background-color: burlywood;
 
 				&.active {
 					display: block;
 				}
 
-				.label, .value {
-					margin: 0;
-					padding-bottom: 10px;
-				}
+				.field-row {
+					.label, .value {
+						margin: 0;
+						padding-bottom: 10px;
+					}
 
-				.label {
-					font-size: 18px
-				}
+					.label {
+						font-size: 16px;
+						font-weight: bold;
+						width: 200px;
+					}
 
-				.value {
-					font-size: 16px;
+					.value {
+						font-size: 14px;
+					}
 				}
 			}
 		}
