--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,7 +17,7 @@ ul {
 
 	.main-title {
 		font-size: 23px;
-		color: gray;
+		color: darkslategrey;
 	}
 
 	.form-section {
@@ -113,12 +113,14 @@ ul {
 				}
 
 				.field-row {
+
 					.label, .value {
 						margin: 0;
 						padding-bottom: 10px;
 					}
 
 					.label {
+						color: darkslategrey;
 						font-size: 16px;
 						font-weight: bold;
 						width: 200px;
@@ -133,7 +135,7 @@ ul {
 	}
 
 	#user-creation, #event-creation {
-		display: none;
+		// display: none;
 	}
 }
 
