--- a/sass/responsive.scss
+++ b/sass/responsive.scss
@@ -8,6 +8,7 @@
 		    background: bisque;
 		    border-radius: 10px;
 		    box-shadow: inset 0 1px 2px rgba(0,0,0,0.075);
+		    box-sizing: box-sizing;
 		}
 
 		#events-display {
@@ -51,6 +52,7 @@
 				.content {
 
 					.field-row {
+						margin-bottom: 10px;
 
 						.label {
 							font-size: 18px;
