--- a/sass/responsive.scss
+++ b/sass/responsive.scss
@@ -1,41 +1,17 @@
 @media screen and(min-width: 501px) {
 	.main-content {
-		
-		#user-creation, #event-creation, #events-display {
-			width: 500px;
-			margin: 0 auto;
-			padding: 30px;
-		    background: bisque;
-		    border-radius: 10px;
-		    box-shadow: inset 0 1px 2px rgba(0,0,0,0.075);
-		    box-sizing: box-sizing;
-		}
-
-		#events-display {
-
-			.accordion {
-			    
-				.content {
-
-					.field-row {
-						display: flex;
-
-						.label {
-							width: 200px;
-						}
-					}
-				}
-			}
-		}
+		width: 500px;
+		margin: 0 auto;
+		padding: 30px;
+	    border-radius: 10px;
+	    box-shadow: inset 0 1px 2px rgba(0,0,0,0.075);
+	    box-sizing: border-box;
 	}
 }
 
 @media screen and(min-width: 728px) {
 	.main-content {
-		
-		#user-creation, #event-creation, #events-display {
-			width: 728px;
-		}
+		width: 728px;
 
 		.main-title {
 			font-size: 25px;
@@ -50,6 +26,7 @@
 			    }
 
 				.content {
+					display: flex;
 
 					.field-row {
 						margin-bottom: 10px;
