--- a/sass/main.scss
+++ b/sass/main.scss
@@ -177,7 +177,7 @@ ul {
 
 	.header {
 
-		.mobile {
+		.container {
 			position: relative;
 
 			.hamburger {
@@ -205,6 +205,10 @@ ul {
 
 			    li {
 			    	padding: 10px;
+			    }
+
+		    	&.no-mobile {
+			    	display: none;
 			    }
 			}
 		}
