--- a/sass/responsive.scss
+++ b/sass/responsive.scss
@@ -6,6 +6,14 @@
 	    border-radius: 10px;
 	    box-shadow: inset 0 1px 2px rgba(0,0,0,0.075);
 	    box-sizing: border-box;
+
+	    .form-section {
+
+	    	.progressBarContainer {
+		    	right: 30px;
+		    	top: 33px;
+	    	}
+		}
 	}
 }
 
@@ -35,6 +43,7 @@
 				    li {
 				    	width: 33%;
 				    	text-align: center;
+				    	font-size: 18px;
 				    }
 
 				    &.no-mobile {
@@ -57,6 +66,10 @@
 				    margin-top: 2px;
 				    position: absolute;
 				    right: 30px;
+				}
+
+				.guest-add-button {
+					font-size: 18px;
 				}
 			}
 
@@ -87,6 +100,14 @@
 					}
 				}
 			}
+		}
+
+		.form-section {
+	    	
+	    	.progressBarContainer {
+		    	right: 30px;
+		    	top: 20px;
+	    	}
 		}
 	}
 }
