--- a/sass/responsive.scss
+++ b/sass/responsive.scss
@@ -7,6 +7,22 @@
 	    box-shadow: inset 0 1px 2px rgba(0,0,0,0.075);
 	    box-sizing: border-box;
 
+	    .header {
+	    	width: 500px;
+
+	    	.container {
+	    		
+	    		.hamburger {
+    				font-size: 40px;
+	    		}
+
+	    		.progress-bar {
+	    			width: 75%;
+	    			right: 65px;
+	    		}
+	    	}
+	    }
+
 	    .form-section {
 
 	    	.progressBarContainer {
@@ -30,11 +46,13 @@
 		}
 
 		.header {
+			width: auto;
+			position: relative;
+			padding: 0;
 
 			.container {
 			    position: relative;
-    			    width: 100%;
-				
+    							
 				.hamburger {
 				    display: none;
 				}
