--- a/sass/responsive.scss
+++ b/sass/responsive.scss
@@ -1,27 +1,32 @@
 @media screen and(min-width: 501px) {
+	.header {
+    	width: 500px;
+    	margin: 0 auto;
+    	padding: 18px 30px;
+    	height: 54px;
+
+    	.container {
+    		
+    		.hamburger {
+				font-size: 40px;
+    		}
+
+    		.progress-bar {
+    			width: 75%;
+    			right: 30px;
+    		}
+
+    		.nav-menu {
+    			top: 54px;
+    		}
+    	}
+    }
 	.main-content {
 		width: 500px;
 		margin: 0 auto;
-		padding: 30px;
-	    border-radius: 10px;
+		padding: 0 30px;
 	    box-shadow: inset 0 1px 2px rgba(0,0,0,0.075);
 	    box-sizing: border-box;
-
-	    .header {
-	    	width: 500px;
-
-	    	.container {
-	    		
-	    		.hamburger {
-    				font-size: 40px;
-	    		}
-
-	    		.progress-bar {
-	    			width: 75%;
-	    			right: 65px;
-	    		}
-	    	}
-	    }
 
 	    .form-section {
 
@@ -34,12 +39,54 @@
 }
 
 @media screen and(min-width: 728px) {
+	.header {
+	    width: 728px;
+	    padding: 0;
+	    height: 69px;
+	    background: black;
+
+		.container {
+		    position: relative;
+							
+			.hamburger {
+			    display: none;
+			}
+
+			.progress-bar {
+			    height: .4em;
+			    width: 75%;
+			    position: absolute;
+			    left: initial;
+			    right: 30px;
+    			top: 48px;
+			}
+			.nav-menu {
+				display: flex;
+			    padding: 0;
+			    position: relative;
+			    margin-top: 15px;
+			    min-height: auto;
+			    top: initial;
+
+			    li {
+			    	width: 33%;
+			    	text-align: center;
+			    	font-size: 18px;
+			    }
+
+			    &.no-mobile {
+			    	display: flex;
+			    }
+
+			    &.mobile {
+			    	display: none;
+			    }
+			}
+		}
+	}
+
 	.main-content {
 		width: 728px;
-
-		.main-title {
-			font-size: getFontSize('small');
-		}
 
 		#event-creation, #user-creation, #events-display {
 			padding-top: 0px;
