--- a/sass/main.scss
+++ b/sass/main.scss
@@ -199,7 +199,7 @@ ul {
 }
 
 .header {
-    position: relative;
+    position: fixed;
     width: 100%;
     box-sizing: border-box;
     z-index: 1;
