--- a/sass/responsive.scss
+++ b/sass/responsive.scss
@@ -40,6 +40,7 @@
 
 @media screen and(min-width: 728px) {
 	.header {
+		position: relative;
 	    width: 728px;
 	    padding: 0;
 	    height: 69px;
