--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,7 +14,7 @@ ul {
 }
 
 .main-content {
-	padding: 0 1em;
+	padding: 30px 1em;
 	background: bisque;
 	position: relative;
 	height: 100%;
@@ -250,7 +250,7 @@ ul {
 		}
 		.progress-bar {
 		    height: 0.4em;
-		    width: 80%;
+		    width: 75%;
 		    position: absolute;
 		    right: 1em;
 
