--- a/sass/responsive.scss
+++ b/sass/responsive.scss
@@ -1,6 +1,5 @@
 @media screen and(min-width: 501px) {
 	.header {
-    	width: 500px;
     	margin: 0 auto;
     	padding: 18px 30px;
     	height: 54px;
@@ -18,13 +17,23 @@
 
     		.nav-menu {
     			top: 54px;
+
+    			&.mobile {
+    				min-height: 57px;
+
+    				li {
+    					width: 33%;
+					    float: left;
+					    box-sizing: border-box;
+					    text-align: center;
+    				}
+    			}
     		}
     	}
     }
 	.main-content {
-		width: 500px;
 		margin: 0 auto;
-		padding: 0 30px;
+		padding: 50px 30px 30px 30px;
 	    box-shadow: inset 0 1px 2px rgba(0,0,0,0.075);
 	    box-sizing: border-box;
 
@@ -55,7 +64,6 @@
 
 			.progress-bar {
 			    height: .4em;
-			    width: 75%;
 			    position: absolute;
 			    left: initial;
 			    right: 30px;
@@ -88,6 +96,7 @@
 
 	.main-content {
 		width: 728px;
+		padding: 0 30px 30px 30px;
 
 		#event-creation, #user-creation, #events-display {
 			padding-top: 0px;
